fix(tab): fix overflow tab

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -153,3 +153,7 @@ html {
   font-family: var(--font-lato);
 }
  
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
